--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,11 +21,11 @@ jobs:
     - run: 
         poetry install --all-extras
     - name: Lint with flake8
-      run: poetry run flake8 schemadiff/ --count --select=E9,F63,F7,F82 --show-source --statistics
+      run: poetry run flake8 oot/ --count --select=E9,F63,F7,F82 --show-source --statistics
     - name: Format with black
-      run: poetry run black schemadiff/ --check
+      run: poetry run black oot/ --check
     - name: Check imports with isort
-      run: poetry run isort schemadiff/ --check-only
+      run: poetry run isort oot/ --check-only
     - name: Test with pytest
       run: poetry run pytest tests/ -sv
     - name: Publish to PyPi
